# MDcraft

./: CMakeLists.txt  README.md
cmake/: FindMPI4PY.cmake
mdcraft/: CMakeLists.txt  configuration.h.in
mdcraft/data/: CMakeLists.txt  atom.h  matrix.h  vector.h
mdcraft/decomp/: CMakeLists.txt  VD3.cxx  VD3.h  decomp.cxx  decomp.h  router.cxx  router.h
mdcraft/io/: CMakeLists.txt
mdcraft/io/vtk/: CMakeLists.txt  pvd_file.cxx  pvd_file.h  variables.cxx  variables.h  vtk_type.cxx  vtk_type.h  vtu_file.cxx  vtu_file.h
mdcraft/lattice/: CMakeLists.txt  domain.cxx  domain.h
mdcraft/neibs/: CMakeLists.txt  grid.cxx  grid.h  verlet-list.cxx  verlet-list.h
mdcraft/solver/: CMakeLists.txt  dp-solver.cxx  dp-solver.h  isolver.cxx  isolver.h  mb-solver.cxx  mb-solver.h  multi.cxx  multi.h  pair.cxx  pair.h  single.cxx  single.h  ternary.cxx  ternary.h
mdcraft/solver/boundary/: base.cxx  base.h  periodic.cxx  periodic.h
mdcraft/solver/potential/: CMakeLists.txt  DeePMD.cxx  DeePMD.h  EAM.cxx  EAM.h  LJs.cxx  LJs.h  base.cxx  base.h  maise_bpnn.cxx  maise_bpnn.h  mlip4.cxx  mlip4.h  pair.cxx  pair.h
mdcraft/solver/stepper/: CMakeLists.txt  base.cxx  base.h  verlet.cxx  verlet.h
mdcraft/solver/thermostat/: base.cxx  base.h  compound.cxx  compound.h  langevin.cxx  langevin.h
mdcraft/tools/: CMakeLists.txt  helpers.h  network.cxx  network.h  split.h  stopwatch.h  thread-pool.h  threads.cxx  threads.h  times.h
mdcraft/tools/bpnn/: CMakeLists.txt  autodiff_utils.h  base.cxx  base.h  maise_ann.cxx  maise_ann.h  maise_model.cxx  maise_model.h
mdcraft/tools/parser/: CMakeLists.txt  base.cxx  base.h  maise_model.cxx  maise_model.h
problems/: CMakeLists.txt
problems/Al-mlip4/: Al.json  analysis.py  run.py
problems/Cu-bpnn/: ase2mdcraft.py  run.py
problems/DeePMD/CH4-molecule/: Lattice.py  run.py
problems/DeePMD/Cu-bulk/: Cu_model.pb  run.py
problems/NiAl/: Al.eam.alloy  Ni.eam.alloy  NiAlpair.eam.alloy  test-Al.py  test-Ni.py  test-NiAl.py
problems/ar-mw/: MW.py  README.md  analysis.py  continue.py  mesh.py  potential.py  prepare.py  run.py
python/: CMakeLists.txt
python/mdcraft/: CMakeLists.txt
python/mdcraft/data/: CMakeLists.txt  __init__.py  _data.cxx
python/mdcraft/decomp/: CMakeLists.txt  __init__.py  _decomp.cxx
python/mdcraft/io/: CMakeLists.txt  __init__.py  _io.cxx
python/mdcraft/lattice/: __init__.py  _lattice.cxx
python/mdcraft/neibs/: CMakeLists.txt  __init__.py  _neibs.cxx
python/mdcraft/solver/: CMakeLists.txt  __init__.py  _solver.cxx
python/mdcraft/solver/boundary/: __init__.py  _boundary.cxx
python/mdcraft/solver/potential/: CMakeLists.txt  __init__.py  _potential.cxx
python/mdcraft/solver/stepper/: __init__.py  _stepper.cxx
python/mdcraft/solver/thermostat/: CMakeLists.txt  __init__.py  _thermostat.cxx
python/mdcraft/tools/: CMakeLists.txt  __init__.py  _tools.cxx
test/data/: test-atoms.py
test/decomposition/: init_mpi.py
test/lattice/: test-domain.py
test/neibs/: verlet-list-test.py
test/solver/: analysis.py  mesh.py  test-EAM.py  test-LJs-mpi.py  test-LJs.py
