# устанавливаем в переменную имя библиотеки по имени папки
# write to a variable the library name according to folder name
get_filename_component(LIB ${CMAKE_CURRENT_SOURCE_DIR} NAME)
file(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx")
add_library(${PROJECT_NAME}-${LIB} SHARED ${SOURCES})
target_link_libraries(${PROJECT_NAME}-${LIB} 
  PUBLIC ${PROJECT_NAME}-data
         ${PROJECT_NAME}-tools
         ${PROJECT_NAME}-parser
         Eigen3::Eigen
)
install(TARGETS ${PROJECT_NAME}-${LIB} DESTINATION lib)
file(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
install(FILES ${HEADERS}
  DESTINATION include/${PROJECT_NAME}/${LIB}
)